setting titles for the different popups and fixing the bug where it doesn't show the negative balance